[package]
name = "mech423-final-project"
version = "0.1.0"
authors = ["EzekielDaun <liuyifei0905@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.16.0", features = [
    "embassy",
    "embassy-executor-interrupt",
    "embassy-executor-thread",
    "embassy-time-timg0",
    "async",
] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32"] }

embassy-executor = { version = "0.3.2", features = ["nightly"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.4.0" }
embassy-time = { version = "0.1.5", features = ["nightly"] }

static_cell = { version = "2.0.0", features = ["nightly"] }
embedded-io-async = "0.6.0"
embedded-hal-async = "=1.0.0-rc.1"

heapless = "0.8.*"

embedded-hal = { version = "0.2.*" }
atomic_float = { version = "0.1.0", default-features = false }
micromath = "2.*"
pid = "4.*"
